# Irogen

./: .gitignore  .riterm_client_key  ADDRESSING_INFO_FIX.md  AGENTS.md  APP_GOSSIP_ADAPTATION.md  ARCHITECTURE_FINAL_REPORT.md  ARCHITECTURE_MIGRATION_REPORT.md  CLAUDE.md  CREATE_TERMINAL_FEATURE.md  CROSSTERM_CONTEXT_IMPLEMENTATION.md  CURRENT_STATUS_AND_NEXT_STEPS.md  Cargo.toml  DEVELOPMENT.md  FINAL_ARCHITECTURE_CLEANUP_REPORT.md  FRONTEND_UPDATE_SUMMARY.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  IROH_GOSSIP_IMPLEMENTATION.md  MESSAGE_SYSTEM_REFACTOR.md  MOBILE_KEYBOARD_TESTING.md  MULTI_SHELL_SUPPORT.md  P2P_TERMINAL_FIX.md  PHASE2_CALLBACK_SIMPLIFICATION.md  PROJECT_ARCHITECTURE_ANALYSIS.md  PTY_INPUT_IMPLEMENTATION.md  QUIC_ARCHITECTURE.md  README.md  README_cn.md  SSHX_IMPLEMENTATION_REPORT.md  TASK_COMPLETION_SUMMARY.md  TCP_FORWARDING_EXAMPLES.md  TERMINAL_INPUT_RESPONSE_FIX.md  TERMINAL_IO_COMPLETE_SUMMARY.md  TERMINAL_IO_SYNC_IMPLEMENTATION.md  TERMINAL_WEBGL_CANVAS_OPTIMIZATION.md  TEST_DUMBPIPE_DEMO.md  TIMEOUT_BEST_PRACTICES.md  XTERM_DEBUG_GUIDE.md  ZSH_SUPPORT.md  app.config.ts  (+46 more)
.claude/: settings.local.json
app/: .gitignore  CLAUDE.md  Cargo.toml  Info.ios.plist  MIGRATION_GUIDE.md  MOBILE_ARCHITECTURE.md  MOBILE_ARCHITECTURE_COMPLETE.md  pubspec.yaml  riterm_app_secret_key  tauri.conf.json
app/capabilities/: desktop.json  main.json  mobile.json
app/lib/: main.dart
app/lib/bridge_generated.dart/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  message_bridge.dart  quic_bridge.dart
app/lib/bridge_generated.dart/api/: iroh_client.dart
app/lib/screens/: connect_screen.dart  connect_screen_simple.dart  main_screen.dart
app/lib/src/generated_bridge.dart/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  message_bridge.dart
app/lib/src/generated_bridge.dart/api/: iroh_client.dart
app/lib/src/rust/: bridge_api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/src/rust/api/: quic_client.dart
app/lib/src/rust/frb_generated.dart/: frb_generated.dart  frb_generated.io.dart
app/lib/stores/: app_store.dart
app/lib/theme/: app_theme.dart
app/lib/widgets/: qr_scanner_dialog.dart  settings_view.dart  tcp_forwarding_view.dart  terminal_view.dart
app/rust/: Cargo.toml
app/rust/src/: frb_generated.rs  frb_generated_old.rs  lib.rs  message_bridge.rs  quic_bridge.rs
app/rust/src/api/: iroh_client.rs
app/src/: CLAUDE.md  crossterm_context.rs  dumbpipe_client.rs  lib.rs  lib_refactored.rs  main.rs  p2p.rs  simple_client.rs  simple_client_minimal.rs  string_compressor.rs  tcp_forwarding.rs  terminal_events.rs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: main.json
app/src-tauri/src/: lib.rs  main.rs  p2p.rs  terminal_events.rs
app/src/commands/: mod.rs  network.rs  permission.rs  session.rs  terminal.rs
app/src/config/: mod.rs
app/src/error/: mod.rs
app/src/events/: mod.rs
app/src/services/: network_service.rs  session_service.rs  terminal_service.rs
app/src/state/: app_state.rs  mod.rs
app/src/tests/: mod.rs
browser/: Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml
browser/crate/: Cargo.toml
browser/src/: lib.rs  shared.rs
cli/: ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  Cargo.toml  OPTIMIZATION_PLAN.md  README.md
cli/src/: CLAUDE.md  cli.rs  client.rs  command_router.rs  controller.rs  crossterm_context.rs  dumbpipe_host.rs  host.rs  local_client.rs  local_terminal_manager.rs  local_webshare.rs  main.rs  message_server.rs  output_batcher.rs  p2p.rs  playback.rs  remote_controller.rs  runner.rs  session_encrypt.rs  shared_terminal.rs  shell.rs  shell_manager.rs  sshx_main.rs  string_compressor.rs  terminal.rs  terminal_config.rs  terminal_impl.rs  terminal_logger.rs  terminal_manager.rs  terminal_runner.rs
cli/src/agent_wrapper/: CLAUDE.md  claude.rs  claude_streaming.rs  codex.rs  events.rs  factory.rs  gemini.rs  message_adapter.rs  mod.rs  opencode.rs  session.rs
cli/src/commands/: host.rs  join.rs  list.rs  mod.rs  play.rs
cli/src/config/: app_config.rs  mod.rs  network_config.rs
cli/src/playback/: mod.rs  player.rs
cli/src/session/: host.rs  manager.rs  mod.rs  participant.rs
cli/src/terminal_impl/: unix.rs  windows.rs
cli/src/ui/: display.rs  mod.rs  qr.rs  shell_list.rs
cli/tests/: ansi_filter_tests.rs  integration_tests.rs
lib/: CLAUDE.md  Cargo.toml
lib/src/: CLAUDE.md
lib/src/agent/: acp.rs  claude_sdk.rs  codex_acp.rs  factory.rs  message_adapter.rs  mod.rs  qwen.rs  zeroclaw_session.rs
shared/: Cargo.toml
shared/examples/: test_p2p_connection.rs
shared/src/: browser.rs  event_manager.rs  lib.rs  message_adapter.rs  message_performance_improvements.rs  message_protocol.rs  message_store.rs  message_sync.rs  p2p.rs  performance_optimized_messaging.rs  quic_server.rs  shell.rs  simple_protocol.rs  stats.rs  string_compressor.rs  tcp_forward.rs  util.rs
shared/src/agent/: CLAUDE.md  CLAUDE_SDK_VS_ACP_REVIEW.md  acp.rs  acp_errors.rs  acp_permission.rs  claude_acp_agent.rs  claude_sdk.rs  codex_acp.rs  events.rs  factory.rs  message_adapter.rs  mod.rs  openclaw_ws.rs  permission_handler.rs  session.rs  session_persistence.rs  slash_commands.rs  zeroclaw_session.rs
shared/src/session_store/: mod.rs  sqlite.rs
tests/: Cargo.toml  basic_protocol_test.rs  simple_protocol_test.rs
tests/integration/: app_client_integration_test.rs  end_to_end_test.rs  simple_host_client_test.rs  simple_host_integration_test.rs
tests/performance/: benchmark_test.rs
zeroclaw/: Cargo.toml  README.md
zeroclaw/src/: agent.rs  config.rs  lib.rs
zeroclaw/src/memory/: chunker.rs  embeddings.rs  hygiene.rs  markdown.rs  mod.rs  sqlite.rs  traits.rs  vector.rs
zeroclaw/src/providers/: compatible.rs  mod.rs  reliable.rs  router.rs  traits.rs
zeroclaw/src/runtime/: mod.rs
zeroclaw/src/tools/: browser.rs  file_read.rs  file_write.rs  git_operations.rs  hardware_board_info.rs  hardware_memory_map.rs  hardware_memory_read.rs  http_request.rs  memory_recall.rs  mod.rs  shell.rs
(+267 files in other folders)
