[package]
name = "riterm"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = [
  "full",
  "net",
  "fs",
  "rt-multi-thread",
] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.9"
crossterm = "0.29"
uuid = { version = "1.17", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
iroh = "0.91.0"
bytes = "1.10"
futures = "0.3"
rand = "0.9"
