[workspace]
members = ["cli", "shared", "app", "browser", "lib", "zeroclaw"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.47", features = [
  "full",
  "net",
  "fs",
  "rt-multi-thread",
] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.9"
crossterm = "0.29"
uuid = { version = "1.17", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
iroh = { version = "0.95", default-features = false }
iroh-base = { version = "0.95", default-features = false }
iroh-tickets = "0.2"
bytes = "1.10"
futures = "0.3"
rand = "0.9"
tauri = { version = "2" }
bincode = "1.3"
chacha20poly1305 = "0.10"
aead = "0.5"
base64 = "0.22"
hex = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.production]
inherits = "release"
panic = "abort"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
