[workspace]
members = ["cli", "shared", "app", "browser/crate"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.47", features = [
  "full",
  "net",
  "fs",
  "rt-multi-thread",
] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.9"
crossterm = "0.29"
uuid = { version = "1.17", features = ["v4", "js"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
iroh = { version = "0.98", default-features = false, features = ["tls-ring"] }
iroh-base = { version = "0.98", default-features = false }
iroh-tickets = "0.5"
bytes = "1.10"
futures = "0.3"
rand = "0.10"
tauri = { version = "2" }
bincode = "1.3"
chacha20poly1305 = "0.10"
aead = "0.5"
base64 = "0.22"
hex = "0.4"

[patch.crates-io]
agent-client-protocol-schema = { path = "patches/agent-client-protocol-schema" }

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.production]
inherits = "release"
panic = "abort"
