[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
name = "riterm"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = ["macos-private-api"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
futures = { workspace = true }
data-encoding = "2.6"
rand = { workspace = true }
url = "2.5"
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
aead = { workspace = true }
brotli = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
