[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
name = "clawdpilot"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
  "devtools",
] }

tokio = { workspace = true }
tokio-util = "0.7"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
iroh = { workspace = true }
iroh-tickets = { workspace = true }
futures = { workspace = true }
data-encoding = "2.6"
rand = { workspace = true }
url = "2.5"
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
async-trait = "0.1"
aead = { workspace = true }
iroh-base = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
regex = "1.10"
dirs = "5.0"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

# Desktop build: full agent support with all agent protocols
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
shared = { path = "../shared", features = ["std"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
release-logging = []

# Mobile build: use mobile feature to exclude heavy agent dependencies (agent-client-protocol, portable-pty, etc.)
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
shared = { path = "../shared", default-features = false, features = ["mobile"] }
tauri-plugin-barcode-scanner = "2"
# JNI for Android foreground service communication
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
