[package]
name = "riterm-browser"
version = "0.1.0"
authors = ["Sterne Lee <sterne.lee@gmail.com>"]
license = "MIT"
description = "Browser WASM module for riterm P2P terminal sharing"
repository = "https://github.com/sternelee/riterm"
documentation = "https://docs.rs/riterm-browser"
keywords = ["terminal", "p2p", "wasm", "browser"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
console_error_panic_hook = "0.1.7"
data-encoding = "2.5.0"
futures-lite = "2.3.0"
getrandom = { version = "0.2", features = ["js"] }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3"
riterm-shared = { path = "../shared" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-subscriber-wasm = "0.1.0"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.4.2"
uuid = { workspace = true }
async-stream = "0.3"
hex = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "--enable-nontrapping-float-to-int",
  "--enable-bulk-memory",
  "--enable-sign-ext",
]