[package]
name = "riterm-browser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
riterm-shared = { version = "0.1.0", path = "../shared" }
console_error_panic_hook = "0.1.7"
futures = "0.3"
serde = "1.0.217"
serde-wasm-bindgen = "0.6.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1.0"
uuid = { version = "1.17", features = ["v4", "js"] }
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.4.2"
js-sys = "0.3"
web-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "--enable-nontrapping-float-to-int",
  "--enable-bulk-memory",
  "--enable-sign-ext",
]