[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = { workspace = true }
crossterm = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
data-encoding = "2.6"
url = "2.5"
tracing-appender.workspace = true
bincode = { workspace = true }
chacha20poly1305 = "0.10"
aead = "0.5"
reqwest = { version = "0.12", features = ["json"] }
fast_qr = { workspace = true, features = ["image"] }
brotli = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
aes = "0.8.3"
ansi_term = "0.12.1"
whoami = { version = "1.5.1", default-features = false }
dirs = "5.0.1"
argon2 = { version = "0.5.2", default-features = false, features = ["alloc"] }
cfg-if = "1.0.0"
ctr = "0.9.2"
encoding_rs = "0.8.31"
pin-project = "1.1.3"

[target.'cfg(unix)'.dependencies]
close_fds = "0.3.2"
nix = { version = "0.27.1", features = ["ioctl", "process", "signal", "term"] }

[target.'cfg(windows)'.dependencies]
conpty = "0.7.0"
