[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = { workspace = true }
crossterm = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
data-encoding = "2.6"
url = "2.5"
tracing-appender.workspace = true
bincode = { workspace = true }
chacha20poly1305 = "0.10"
aead = "0.5"
reqwest = { version = "0.12", features = ["json"] }
fast_qr = { workspace = true }
brotli = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
regex = "1.10"
lazy_static = "1.5"
