[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
iroh = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
data-encoding = "2.6"
url = "2.5"
tracing-appender.workspace = true
bincode = { workspace = true }
chacha20poly1305 = "0.10"
aead = "0.5"
base64 = { workspace = true }
hex = { workspace = true }
regex = "1.10"
lazy_static = "1.5"
dirs = "5.0"
gethostname = "0.5"
fast_qr = "0.13"
iroh-tickets = { workspace = true }


shared = { path = "../shared" }

# QUIC protocol dependencies
async-trait = "0.1"
futures-util = "0.3"
agent-client-protocol = "0.9.4"
tokio-util = { version = "0.7", features = ["compat"] }

# Logging dependencies
chrono = "0.4"

[dev-dependencies]
tempfile = "3.13"

[features]
default = []
release-logging = []
