[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
aead = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Additional dependencies needed for agent module
async-trait = "0.1"
agent-client-protocol = "0.9.4"
tokio-util = { version = "0.7", features = ["compat"] }
gethostname = "0.5"
regex = "1.10"
thiserror = "1.0"
libc = "0.2"

# Shared crate
riterm-shared = { path = "../shared" }

# ZeroClaw built-in agent
zeroclaw = { path = "../zeroclaw" }

# Codex ACP dependencies (git)
[dependencies.codex-core]
git = "https://github.com/zed-industries/codex"
branch = "acp"

[dependencies.codex-protocol]
git = "https://github.com/zed-industries/codex"
branch = "acp"

[dependencies.codex-apply-patch]
git = "https://github.com/zed-industries/codex"
branch = "acp"

[dependencies.codex-login]
git = "https://github.com/zed-industries/codex"
branch = "acp"

[dependencies.codex-arg0]
git = "https://github.com/zed-industries/codex"
branch = "acp"

[dependencies.codex-mcp-server]
git = "https://github.com/zed-industries/codex"
branch = "acp"

[dev-dependencies]
tempfile = "3.13"
