[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = [
  "tokio/full",
  "tracing-subscriber/env-filter",
  "dirs",
  "agent-client-protocol",
  "tokio-util",
  "gethostname",
  "libc",
  "portable-pty",
  "sysinfo",
]
# Mobile: minimal dependencies for remote agent sessions
mobile = [
  "tokio/full",
  "tracing-subscriber/env-filter",
  "dirs",
  "libc",
  "gethostname",
  "tokio-util",
]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
iroh = { workspace = true }
iroh-tickets = { workspace = true }
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
aead = { workspace = true }
rand = { workspace = true }
data-encoding = "2.6"
url = "2.5"
futures = { workspace = true }
futures-util = "0.3"
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
regex = "1.10"
dirs = { version = "5.0", optional = true }
ignore = "0.4"
base64 = { workspace = true }
hex = { workspace = true }
postcard = "1.1.1"
n0-future = "0.3"
uuid = { workspace = true }
async-trait = "0.1"
iroh-base = { workspace = true }
tracing-subscriber = { version = "0.3", optional = true }
tyzen = { version = "0.2.4", features = ["serde_json"] }

# Agent related dependencies - only included in std feature
agent-client-protocol = { version = "0.12.1", features = [
  "unstable",
], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
gethostname = { version = "0.5", optional = true }
thiserror = "1.0"
libc = { version = "0.2", optional = true }
portable-pty = { workspace = true, optional = true }
bytes = { workspace = true }

# System monitoring - only in std
sysinfo = { version = "0.33", optional = true }

# Mobile build: use rustls instead of native-tls to avoid OpenSSL linking issues
# and exclude heavy agent dependencies
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }

[dev-dependencies]
tempfile = "3"
