[package]
name = "zeroclaw"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
sha2 = "0.10"
directories = "5.0"

# Skills and SkillForge dependencies
toml = "1.0"
console = "0.15"

# Cron dependencies
cron = "0.12"
rand = "0.8"

# HTTP request tool
http-body-util = "0.1"

# Git operations (optional - requires libgit2)
git2 = { version = "0.18", default-features = false, optional = true }

# Browser automation (optional)
fantoccini = { version = "0.22.0", optional = true, default-features = false, features = ["rustls-tls"] }

# PDF extraction for RAG (optional)
pdf-extract = { version = "0.10", optional = true }

# Composio integration (uses reqwest directly, no composio crate)
# composio = { version = "0.6", optional = true }

# Screenshot/image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# nusb for USB device enumeration (hardware discovery, optional)
nusb = { version = "0.2", default-features = false, optional = true }

# tokio-serial for serial port for peripheral communication (optional)
tokio-serial = { version = "5", default-features = false, optional = true }

# probe-rs for STM32/Nucleo memory read (optional, adds ~50 deps; optional)
probe-rs = { version = "0.30", optional = true }

[features]
default = []
tauri = []
desktop = []
mobile = []
# Enable git operations tool
git = ["dep:git2"]
# Enable PDF support for RAG
rag-pdf = ["dep:pdf-extract"]
# Enable browser automation tools
browser = ["dep:fantoccini"]
# Enable hardware tools with nusb, tokio-serial, probe-rs
hardware = ["dep:nusb", "dep:tokio-serial", "dep:probe-rs"]
# probe = probe-rs for Nucleo memory read (adds ~50 deps; optional)
probe = ["dep:probe-rs"]

[dev-dependencies]
tempfile = "3.13"
