[package]
name = "rust_lib_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Flutter Rust Bridge
flutter_rust_bridge = "=2.11.1"

# Iroh dependencies
iroh = "0.94"
iroh-gossip = "0.94"

# Tokio for async runtime
tokio = { version = "1.47", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Utilities
uuid = { version = "1.17", features = ["v4"] }
base64 = "0.22"
hex = "0.4"
fast_qr = "0.13.0"
lazy_static = "1.5"
data-encoding = "2.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared workspace dependencies
riterm-shared = { path = "../../shared" }

[build-dependencies]
flutter_rust_bridge_codegen = "2.11.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
